# PBL---Adam

./: README.md
my_cam/: package.xml  setup.cfg  setup.py
my_cam/launch/: my_cam.launch.py
my_cam/my_cam/: image_publisher.py
ros_hand_gesure_recognition/: package.xml  setup.cfg  setup.py
ros_hand_gesure_recognition/launch/: hand_sign.launch.py  sign_control.launch.py
ros_hand_gesure_recognition/ros_hand_gesure_recognition/: app.py  cvfpscalc.py  gesture_recognition.py  hand_sign_recognition.py  sign_to_controller.py
ros_hand_gesure_recognition/ros_hand_gesure_recognition/notebooks/: keypoint_classification_EN.ipynb  point_history_classification.ipynb
